fix:components and services fixes

--- a/src/app/checkout-success/checkout-success.component.html
+++ b/src/app/checkout-success/checkout-success.component.html
@@ -1,1 +1,7 @@
-<p>checkout-success works!</p>
+<div class="text-center mt-8">
+  <h1 class="text-3xl font-bold">Thank You for Your Order!</h1>
+  <p class="text-lg mt-4">Your order ID is {{ orderId }}</p>
+  <a routerLink="/" class="mt-4 inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">
+    Back to Home
+  </a>
+</div>
