--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-<app-header></app-header>
+<!-- <app-header></app-header>
 <main class="container mx-auto p-4">
   <router-outlet></router-outlet>
 </main>
 <app-footer></app-footer>
+ -->
