--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -1,1 +1,9 @@
-<p>product-detail works!</p>
+<div *ngIf="product$ | async as product" class="max-w-2xl mx-auto p-4">
+  <img [src]="product.image" [alt]="product.name" class="h-64 w-full object-cover rounded">
+  <h1 class="text-2xl font-bold mt-4">{{ product.name }}</h1>
+  <p class="text-gray-600 mt-2">{{ product.description }}</p>
+  <p class="text-lg font-semibold mt-2">{{ product.price | currency }}</p>
+  <button (click)="addToCart(product.id)" class="mt-4 bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">
+    Add to Cart
+  </button>
+</div>
