--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,11 @@
-<header class="bg-blue-600 text-white p-4 flex justify-between items-center">
-  <a routerLink="/" class="font-bold text-lg">Mini Commerce</a>
-  <a routerLink="/cart" class="text-white">
-    Cart ({{ cartItemCount$ | async }})
-  </a>
+<header class="bg-white shadow-md">
+  <div class="container mx-auto px-4">
+    <div class="flex justify-between items-center py-4">
+      <a routerLink="/" class="text-2xl font-bold text-gray-800">AlamShopify</a>
+      <a routerLink="/cart" class="relative text-gray-600 hover:text-gray-800 transition-colors duration-300">
+        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"></path></svg>
+        <span *ngIf="cartItemCount$ | async as count" class="absolute -top-1 -right-1 bg-red-500 text-white rounded-full text-xs w-5 h-5 flex items-center justify-center">{{ count }}</span>
+      </a>
+    </div>
+  </div>
 </header>
